--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(106, 195, 218);">
         <div class="container-fluid">
         <i data-feather="" ></i>  <a  class="navbar-brand" href="#">
-            <img src="../assets/img/sports.jpg" alt="caliente" width="50" height="50">
+            <img src="./assets/img/sports.jpg" alt="caliente" width="50" height="50">
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
