--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Footbal</a><!--Footbal-->
+                <a class="nav-link active" aria-current="page" href="./index.html">Footbal</a><!--Footbal-->
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./indexTenis/indexTenis.html">Tenis</a><!--Tenis-->
